--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.4.0",
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
-    "dotenv": "^16.0.3"
+    "dotenv": "^16.0.3",
+    "@vercel/node": "^2.15.1"
   }
 }
